# xcalc-core

./: CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt
src/internal/: Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
src/internal/constants/: ConstantsProvider.cpp  ConstantsProvider.h
src/internal/expressions/: ArithmeticExpression.cpp  ArithmeticExpression.h  DecimalExpression.cpp  DecimalExpression.h  Expression.h  FunctionExpression.cpp  FunctionExpression.h  UnaryExpression.cpp  UnaryExpression.h  VariableExpression.cpp  VariableExpression.h
src/internal/functions/: FunctionsProvider.cpp  FunctionsProvider.h
src/internal/operators/: OperatorsProvider.cpp  OperatorsProvider.h
src/internal/terms/: Terms.h
src/internal/utils/: AngleUnitsProvider.cpp  AngleUnitsProvider.h  EvaluationError.cpp  EvaluationError.h  Formatter.h
src/public/: xcalc.cpp
src/public/include/: xcalc.h
tests/: .gitignore  CMakeLists.txt
tests/src/: .gitignore  CMakeLists.txt  binary_operators_check.cpp  evaluate.cpp  xcalc_core_tests
